--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
           </section>
         </div>
       </section>
+      <p class="footer">Developed by Rafaela Bourdette 2023</p>
     </main>
-    <footer>Developed by Rafaela Bourdette 2023</footer>
+   
 
     <script src="js/script.js"></script>
   </body>
