--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <h2 class="title">Different minds</h2>
+      <h2 class="title">Different Personalities</h2>
       <section class="famous">
         <div class="grid">
           <ul>
