--- a/index.html
+++ b/index.html
@@ -29,12 +29,30 @@
       <section class="famous">
         <div class="grid">
           <ul>
-            <li><img src="images/bill.jpeg" /></li>
-            <li><img src="images/charles.jpg" /></li>
-            <li><img src="images/steve.png" /></li>
-            <li><img src="images/ada.jpg" /></li>
-            <li><img src="images/alan.jpg" /></li>
-            <li><img src="images/john.jpeg" /></li>
+            <li class="person">
+              <img src="images/bill.jpeg" />
+              <div class="name">Bill Gates</div>
+            </li>
+            <li class="person">
+              <img src="images/charles.jpg" />
+              <div class="name">Charles Babbage</div>
+            </li>
+            <li class="person">
+              <img src="images/steve.png" />
+              <div class="name">Steve Jobs</div>
+            </li>
+            <li class="person">
+              <img src="images/ada.jpg" />
+              <div class="name">Ada Lovelace</div>
+            </li>
+            <li class="person">
+              <img src="images/alan.jpg" />
+              <div class="name">Alan Turing</div>
+            </li>
+            <li class="person">
+              <img src="images/john.jpeg" />
+              <div class="name">John von Neumann</div>
+            </li>
           </ul>
         </div>
         <div class="content">
