--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <h2 class="title">Different minds</h2>
+      <h2 class="title">Unique minds</h2>
       <p class="description">Click on the image</p>
       <section class="famous">
         <div class="grid">
