--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       </nav>
     </header>
     <main>
-      <h2 class="title">Unique minds</h2>
+      <h2 class="title">Different minds</h2>
       <p class="description">Click on the image</p>
       <section class="famous">
         <div class="grid">
           <ul>
-            <li class="person">
+            <li class="person coloring">
               <img src="images/bill.jpeg" />
               <div class="name">Bill Gates</div>
             </li>
